--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^42.0.0",
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "@headlessui/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
@@ -20,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
+    "react-speech-recognition": "^3.10.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
