--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "docx": "^8.5.0",
+    "drag-drop": "^7.2.0",
     "file-saver": "^2.0.5",
+    "jodit-react": "^4.1.2",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.0",
