--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ckeditor/ckeditor5-build-classic": "^42.0.0",
     "@headlessui/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,6 +29,7 @@
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "react-speech-recognition": "^3.10.0",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
