--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jodit-react": "^4.1.2",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
