--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "wavesurfer.js": "^7.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
