--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
