--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "drag-drop": "^7.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.2.14",
+    "html2canvas": "^1.4.1",
     "jodit-react": "^4.1.2",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
